@@ -227,12 +227,12 @@
 ;; (setq max-lisp-eval-depth 4000)
 ;; (setq debug-on-error t)
 
-(autoload 'zone-when-idle "zone" nil t)
-(zone-when-idle (* 60  30))
-;; zone-pgm-stress will destroy the clipboard
-(setq zone-programs (append zone-programs nil))
-(setq zone-programs (remq 'zone-pgm-stress zone-programs))
-(setq zone-programs (remq 'zone-pgm-stress-destress zone-programs))
+;; (autoload 'zone-when-idle "zone" nil t)
+;; (zone-when-idle (* 60  30))
+;; ;; zone-pgm-stress will destroy the clipboard
+;; (setq zone-programs (append zone-programs nil))
+;; (setq zone-programs (remq 'zone-pgm-stress zone-programs))
+;; (setq zone-programs (remq 'zone-pgm-stress-destress zone-programs))
 
 (add-hook 'after-init-hook
           (lambda ()
