@@ -1,3 +1,7 @@
+2017-04-07  Liu Xin  <meteor1113@qq.com>
+
+	* init/init-editor.el (after-init-hook): Disable zone for performance.
+
 2017-03-21  Liu Xin  <meteor1113@qq.com>
 
 	* init/modules/init-toolbar.el (eq): Disable toolbar for osx.
